// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabSet Tab matches snapshot 1`] = `
<div
  className="nhsuk-tab-set__tab"
/>
`;

exports[`TabSet matches snapshot 1`] = `
<div
  className="nhsuk-tab-set"
/>
`;
